--- a/dhermesfront/src/pages/perros/perrosContainer.css
+++ b/dhermesfront/src/pages/perros/perrosContainer.css
@@ -1,3 +1,11 @@
+
+/* In your perrosContainer.css or a global CSS file */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+body, button, p, div, span, a, h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+}
+
 .dogcardimg {
     width: 150px;
     height: 150px;
